# Last-Words

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
config/: levels.yaml
design/: framing_narrative.md  level_design.md  opening_briefing.md
docs/: adding_a_level.md  adding_a_provider.md  architecture.md  testing.md
prompts/: level_1.md  level_2.md
src/last_words/: __init__.py  cli.py
src/last_words/actor/: __init__.py  actor.py
src/last_words/core/: __init__.py  prompt_loader.py  state_machine.py  types.py
src/last_words/judge/: __init__.py  judge.py
src/last_words/levels/: __init__.py  level_1.py  level_2.py  registry.py
src/last_words/providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  registry.py
src/last_words/runtime/: __init__.py  events.py  session.py
src/last_words/ui/: __init__.py  terminal.py
tests/integration/: test_judge_live.py
tests/unit/: test_actor.py  test_dispositions.py  test_end_to_end.py  test_judge_parsing.py  test_ollama_provider.py  test_prompt_loader.py  test_provider_registry.py  test_state_machine.py  test_types.py
